[gd_scene load_steps=34 format=3 uid="uid://btymg45ij342p"]

[ext_resource type="Script" path="res://player/Player.gd" id="1_q2xcu"]
[ext_resource type="Texture2D" uid="uid://cpr0jsuwiod67" path="res://sprites/player/down/down_1.png" id="2_5htem"]
[ext_resource type="Texture2D" uid="uid://clkatei4rhtda" path="res://sprites/player/death/death_1.png" id="2_e1cwu"]
[ext_resource type="Texture2D" uid="uid://dhn07adk7vupv" path="res://sprites/player/idle/idle_stand.png" id="3_k76o1"]
[ext_resource type="Texture2D" uid="uid://buwmhvt75cap2" path="res://sprites/player/death/death_2.png" id="3_qdpvw"]
[ext_resource type="Texture2D" uid="uid://ch1b4cxqv28qa" path="res://sprites/player/down/down_2.png" id="3_r5qro"]
[ext_resource type="Texture2D" uid="uid://p665r47ihj1j" path="res://sprites/player/idle/idle_breath.png" id="4_tkvrh"]
[ext_resource type="Texture2D" uid="uid://cfbed1yvrefsi" path="res://sprites/player/idle/idle_jump_1.png" id="5_7iwsf"]
[ext_resource type="Texture2D" uid="uid://cbcums3dtyd0c" path="res://sprites/player/idle/idle_jump_2.png" id="6_6wvrw"]
[ext_resource type="Texture2D" uid="uid://xsvvdgvrnhl7" path="res://sprites/player/idle/idle_jump_3.png" id="7_04ois"]
[ext_resource type="Texture2D" uid="uid://daw4eerw1rdva" path="res://sprites/player/left/left_1.png" id="8_cuwq8"]
[ext_resource type="Texture2D" uid="uid://s7r51snbukap" path="res://sprites/player/left/left_2.png" id="9_o6jc7"]
[ext_resource type="Texture2D" uid="uid://cdojqf1grj0wh" path="res://sprites/player/left/left_3.png" id="10_pm0yq"]
[ext_resource type="Texture2D" uid="uid://qenlvaw3ouox" path="res://sprites/player/right/right_1.png" id="11_o2bp0"]
[ext_resource type="Texture2D" uid="uid://cn81khv4qtvkg" path="res://sprites/player/right/right_2.png" id="12_2ks0v"]
[ext_resource type="Texture2D" uid="uid://cnps7q3ok5lqw" path="res://sprites/player/right/right 3.png" id="13_qyic6"]
[ext_resource type="Texture2D" uid="uid://cgpmr7jovpwb3" path="res://sprites/player/up/up_1.png" id="15_ur6vi"]
[ext_resource type="Texture2D" uid="uid://db5qeoi5eb78b" path="res://sprites/player/up/up_2.png" id="16_arsk4"]
[ext_resource type="Texture2D" uid="uid://b32ygixawrsac" path="res://sprites/buttons/button_placeholder_up.png" id="19_g3l2f"]
[ext_resource type="Texture2D" uid="uid://cub8xceqt4usg" path="res://sprites/buttons/button_placeholder_down.png" id="20_q1uxl"]
[ext_resource type="Texture2D" uid="uid://bi4hnmyn7dl1y" path="res://sprites/player/player_icon.png" id="21_lieit"]
[ext_resource type="AudioStream" uid="uid://bmbkbhg80khr4" path="res://audio/player_death.mp3" id="22_vy8f6"]
[ext_resource type="Texture2D" uid="uid://cp4qdq7vl5kg3" path="res://sprites/buttons/unmute.png" id="22_xtmto"]
[ext_resource type="Texture2D" uid="uid://miov2b8x3h5" path="res://sprites/buttons/muted.png" id="23_a3fyw"]
[ext_resource type="AudioStream" uid="uid://baosxho65mem5" path="res://audio/game_bgm.mp3" id="23_eww6y"]
[ext_resource type="AudioStream" uid="uid://dkthkrrggah5f" path="res://audio/fall_sound.mp3" id="24_haxk6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8r5le"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_e1cwu")
}, {
"duration": 1.0,
"texture": ExtResource("3_qdpvw")
}, {
"duration": 1.0,
"texture": ExtResource("2_e1cwu")
}, {
"duration": 1.0,
"texture": ExtResource("3_qdpvw")
}, {
"duration": 1.0,
"texture": ExtResource("2_e1cwu")
}, {
"duration": 1.0,
"texture": ExtResource("3_qdpvw")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"death",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_5htem")
}, {
"duration": 1.0,
"texture": ExtResource("3_r5qro")
}],
"loop": true,
"name": &"down",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.5,
"texture": ExtResource("3_k76o1")
}, {
"duration": 1.5,
"texture": ExtResource("4_tkvrh")
}, {
"duration": 1.5,
"texture": ExtResource("3_k76o1")
}, {
"duration": 1.5,
"texture": ExtResource("4_tkvrh")
}, {
"duration": 1.5,
"texture": ExtResource("3_k76o1")
}, {
"duration": 1.5,
"texture": ExtResource("4_tkvrh")
}, {
"duration": 1.5,
"texture": ExtResource("3_k76o1")
}, {
"duration": 0.5,
"texture": ExtResource("5_7iwsf")
}, {
"duration": 0.5,
"texture": ExtResource("6_6wvrw")
}, {
"duration": 0.5,
"texture": ExtResource("7_04ois")
}, {
"duration": 0.5,
"texture": ExtResource("3_k76o1")
}, {
"duration": 0.5,
"texture": ExtResource("5_7iwsf")
}, {
"duration": 0.5,
"texture": ExtResource("6_6wvrw")
}, {
"duration": 0.5,
"texture": ExtResource("7_04ois")
}, {
"duration": 0.5,
"texture": ExtResource("3_k76o1")
}, {
"duration": 0.5,
"texture": ExtResource("5_7iwsf")
}, {
"duration": 0.5,
"texture": ExtResource("6_6wvrw")
}, {
"duration": 0.5,
"texture": ExtResource("7_04ois")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_cuwq8")
}, {
"duration": 1.0,
"texture": ExtResource("9_o6jc7")
}, {
"duration": 1.0,
"texture": ExtResource("10_pm0yq")
}, {
"duration": 1.0,
"texture": ExtResource("9_o6jc7")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_o2bp0")
}, {
"duration": 1.0,
"texture": ExtResource("12_2ks0v")
}, {
"duration": 1.0,
"texture": ExtResource("13_qyic6")
}, {
"duration": 1.0,
"texture": ExtResource("12_2ks0v")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": ExtResource("3_k76o1")
}, {
"duration": 0.5,
"texture": ExtResource("5_7iwsf")
}, {
"duration": 0.5,
"texture": ExtResource("6_6wvrw")
}, {
"duration": 0.5,
"texture": ExtResource("7_04ois")
}],
"loop": true,
"name": &"treasureGet",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_ur6vi")
}, {
"duration": 1.0,
"texture": ExtResource("16_arsk4")
}],
"loop": true,
"name": &"up",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6hi15"]
size = Vector2(49, 9)

[sub_resource type="Animation" id="Animation_rquq5"]
resource_name = "Fade in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_61pqu"]
resource_name = "Fade out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_x00ek"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ycbx5"]
_data = {
"Fade in": SubResource("Animation_rquq5"),
"Fade out": SubResource("Animation_61pqu"),
"RESET": SubResource("Animation_x00ek")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wscho"]
size = Vector2(32, 98)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_q2xcu")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_8r5le")
animation = &"idle"

[node name="EnvironmentCollider" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 61.5)
shape = SubResource("RectangleShape2D_6hi15")

[node name="PlayerCamera" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)

[node name="DirectionalButtons" type="CanvasLayer" parent="PlayerCamera"]
layer = 2
visible = false
scale = Vector2(2, 2)
transform = Transform2D(2, 0, 0, 2, 0, 0)

[node name="UP" type="TouchScreenButton" parent="PlayerCamera/DirectionalButtons"]
position = Vector2(115.834, 192)
scale = Vector2(2, 2)
texture_normal = ExtResource("19_g3l2f")
texture_pressed = ExtResource("20_q1uxl")
passby_press = true
action = "ui_up"

[node name="DOWN" type="TouchScreenButton" parent="PlayerCamera/DirectionalButtons"]
position = Vector2(115.834, 385)
scale = Vector2(2, 2)
texture_normal = ExtResource("19_g3l2f")
texture_pressed = ExtResource("20_q1uxl")
passby_press = true
action = "ui_down"

[node name="LEFT" type="TouchScreenButton" parent="PlayerCamera/DirectionalButtons"]
position = Vector2(13.5, 288)
scale = Vector2(2, 2)
texture_normal = ExtResource("19_g3l2f")
texture_pressed = ExtResource("20_q1uxl")
passby_press = true
action = "ui_left"

[node name="RIGHT" type="TouchScreenButton" parent="PlayerCamera/DirectionalButtons"]
position = Vector2(218.5, 288)
scale = Vector2(2, 2)
texture_normal = ExtResource("19_g3l2f")
texture_pressed = ExtResource("20_q1uxl")
passby_press = true
action = "ui_right"

[node name="Transitions" type="CanvasLayer" parent="PlayerCamera"]
layer = 3
visible = false

[node name="ColorRect" type="ColorRect" parent="PlayerCamera/Transitions"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TransitionsPlayer" type="AnimationPlayer" parent="PlayerCamera/Transitions"]
libraries = {
"": SubResource("AnimationLibrary_ycbx5")
}

[node name="LifeCounter" type="CanvasLayer" parent="PlayerCamera"]
layer = 2
visible = false
scale = Vector2(1.5, 1.5)
transform = Transform2D(1.5, 0, 0, 1.5, 0, 0)

[node name="PlayerIcon" type="TextureRect" parent="PlayerCamera/LifeCounter"]
offset_left = 62.0
offset_top = 92.0
offset_right = 120.0
offset_bottom = 150.0
texture = ExtResource("21_lieit")

[node name="Lives" type="RichTextLabel" parent="PlayerCamera/LifeCounter"]
offset_left = 125.0
offset_top = 92.0
offset_right = 205.0
offset_bottom = 161.0
theme_override_font_sizes/normal_font_size = 50
text = "× 0"
fit_content = true
autowrap_mode = 0

[node name="MuteButton" type="CanvasLayer" parent="PlayerCamera"]
visible = false

[node name="Mute" type="TouchScreenButton" parent="PlayerCamera/MuteButton"]
position = Vector2(102, 12)
scale = Vector2(0.213413, 0.213413)
texture_normal = ExtResource("22_xtmto")
texture_pressed = ExtResource("23_a3fyw")

[node name="PlayerHurtbox" type="Area2D" parent="." groups=["Player"]]

[node name="HurtboxColliider" type="CollisionShape2D" parent="PlayerHurtbox"]
position = Vector2(0, 17)
shape = SubResource("RectangleShape2D_wscho")

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("22_vy8f6")
volume_db = 7.5
pitch_scale = 0.75

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("23_eww6y")
volume_db = 7.5

[node name="FallingSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("24_haxk6")

[connection signal="pressed" from="PlayerCamera/MuteButton/Mute" to="." method="_on_mute_pressed"]
